<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.greatape.bmdsapp.DemoActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/network_title"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/video_list_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        <!--style="?android:attr/buttonBarStyle"-->
        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/up_level"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src ="@drawable/ic_circle_arrow_up"
                android:onClick="onLevelUp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/level_up">
            </ImageButton >
            <Spinner
                android:id="@+id/file_list"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp" />
            </LinearLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/play_video"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/play_video"
                android:enabled="false"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="onPlayVideo">
            </Button>
            <Button
                android:id="@+id/stop_video"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/stop_video"
                android:enabled="false"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="stopVideo">
            </Button>
        </LinearLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/random_access"
                android:text="@string/use_smb_random_access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/repeat"
                android:text="@string/repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/video_view_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <SurfaceView
            android:id="@+id/video_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
        <View
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
